@@ -1,18 +1,19 @@
-arm-coff		arm-unknown-coff
-arm-elf			arm-unknown-elf
-sun3			m68k-sun-sunos4.1.1
-sun4 			sparc-sun-sunos4.1.1
-ibm			i370-ibm-aix
-i386-os2		i386-pc-os2
-os400			powerpc-ibm-os400
-mmix			mmix-knuth-mmixware
-mmix-elf		mmix-knuth-elf
-i386-linux		i386-pc-linux-gnu
-i386-netbsd		i386-pc-netbsd
-i386-openbsd		i386-pc-openbsd
-i386-freebsd		i386-pc-freebsd
-i386-elf		i386-pc-elf
-i486-elf		i486-pc-elf
-i586-elf		i586-pc-elf
-i686-elf		i686-pc-elf
-i786-elf		i786-pc-elf
+arm-coff			arm-unknown-coff
+arm-elf				arm-unknown-elf
+sun3				m68k-sun-sunos4.1.1
+sun4 				sparc-sun-sunos4.1.1
+ibm				i370-ibm-aix
+i386-os2			i386-pc-os2
+os400				powerpc-ibm-os400
+mmix				mmix-knuth-mmixware
+mmix-elf			mmix-knuth-elf
+i386-linux			i386-pc-linux-gnu
+i386-netbsd			i386-pc-netbsd
+i386-openbsd			i386-pc-openbsd
+i386-freebsd			i386-pc-freebsd
+i386-elf			i386-pc-elf
+i486-elf			i486-pc-elf
+i586-elf			i586-pc-elf
+i686-elf			i686-pc-elf
+i786-elf			i786-pc-elf
+amd64-unknown-freebsd5.2	x86_64-unknown-freebsd5.2
